--- a/style/common.css
+++ b/style/common.css
@@ -43,9 +43,11 @@ h3,h4{
 	font-size: 17px;
 	font-weight: bold;
 	padding: 0;
-	margin: 0 0 10px 0;
+	margin: 0 0 4px 0;
 }
-
+p {
+    margin: 0 0 1em 0;
+}
 
 #page-container{
     width: 960px;
@@ -83,6 +85,7 @@ h3,h4{
 	text-transform: uppercase;
 	display: inline-block;
 	font-size: 38px;
+    font-weight:normal;
 	margin: 0;
 }
 #top-nav {
@@ -116,12 +119,6 @@ h3,h4{
 .content {
 	margin-bottom: 20px;
 	padding-bottom: 10px;
-}
-.content ul {
-	padding-left: 30px;
-}
-.content li {
-	line-height: 30px;
 }
 .header h2 {
 	font-size: 19px;
